# new_opengl_study

./: .gitignore  CMakeLists.txt
037_assimp_demo/: CMakeLists.txt
037_assimp_demo/src/: model_loading.cpp
038_depth_test/: CMakeLists.txt
038_depth_test/src/: test.cpp
039_stencil_buffer/: CMakeLists.txt
039_stencil_buffer/src/: test.cpp
040_blend/: CMakeLists.txt
040_blend/src/: test.cpp
041_face_culling/: CMakeLists.txt
041_face_culling/src/: test.cpp
042_frame_buffers/: CMakeLists.txt
042_frame_buffers/src/: test.cpp
043_love_demo/: CMakeLists.txt
043_love_demo/src/: main.h
044_cube_map/: CMakeLists.txt
044_cube_map/src/: main.cpp  main.h
3d_brain_map/: CMakeLists.txt
3d_brain_map/src/: blur.h  common.h  main.cpp  test.cpp
3d_brain_map_test/: CMakeLists.txt
3d_brain_map_test/src/: common.cpp  data.cpp  data.h  test.cpp
cmake/: build.cmake
common/: CMakeLists.txt
common/src/: glad.c  stb_image.cpp
common/src/meshs/: BoxMesh.h  WindowMesh.h
configuration/: root_directory.h.in
libs/glad/: CMakeLists.txt
libs/imgui/: CMakeLists.txt
libs/include/: filesystem.h  path.h
libs/include/glad/: glad.h
libs/include/learnopengl/: camera.h  mesh.h  model.h  shader_m.h
libs/include/meshs/: FloorMesh.h  GrassMesh.h  LandscapeSkyMesh.h
libs/stb_image/: CMakeLists.txt
libs/stb_image/src/: stb_image.cpp
love/: CMakeLists.txt
love/src/: imgui.ini  main.cpp  main.h  main1.cpp
resources/shader/037/: assimp_demo.frag
resources/shader/038/: box.frag
resources/shader/039/: box.frag  outlining.frag
resources/shader/041/: grass.frag
resources/shader/042/: screen.frag  screen.vert
resources/shader/043_love_demo/: petal.vert
resources/shader/3d_brain_map/: brain.vert  common.frag  screen.frag
resources/shader/3d_brain_map_test/: brain.frag  brain.vert  common.frag  common.vert  screen.frag  volume.frag  volume.vert
resources/shader/common/: sky.frag  sky.vert
resources/shader/love/: petal.frag
src/: model_loading.cpp
